# chrome-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  sdlc-config.json
.claude/: sdlc-state.json
.claude/steering/: product.md  retrospective.md  structure.md  tech.md
.github/workflows/: ci.yml  nmg-sdlc-contribution-gate.yml  release.yml
docs/: claude-code.md  codex.md
examples/: AGENTS.md.example  CLAUDE.md.example
man/: agentchrome-audit-lighthouse.1  agentchrome-audit.1  agentchrome-capabilities.1  agentchrome-completions.1  agentchrome-config-init.1  agentchrome-config-path.1  agentchrome-config-show.1  agentchrome-config.1  agentchrome-connect.1  agentchrome-console-follow.1  agentchrome-console-read.1  agentchrome-console.1  agentchrome-cookie-clear.1  agentchrome-cookie-delete.1  agentchrome-cookie-list.1  agentchrome-cookie-set.1  agentchrome-cookie.1  agentchrome-diagnose.1  agentchrome-dialog-handle.1  agentchrome-dialog-info.1  agentchrome-dialog.1  agentchrome-dom-children.1  agentchrome-dom-events.1  agentchrome-dom-get-attribute.1  agentchrome-dom-get-html.1  agentchrome-dom-get-style.1  agentchrome-dom-get-text.1  agentchrome-dom-parent.1  agentchrome-dom-remove.1  agentchrome-dom-select.1  agentchrome-dom-set-attribute.1  agentchrome-dom-set-style.1  agentchrome-dom-set-text.1  agentchrome-dom-siblings.1  agentchrome-dom-tree.1  agentchrome-dom.1  agentchrome-emulate-reset.1  agentchrome-emulate-set.1  agentchrome-emulate-status.1  agentchrome-emulate.1  (+66 more)
specs/bug-detect-codex-runtime-env-vars-for-active-skill-notice-scoping/: design.md  requirements.md  tasks.md  verification-report.md
specs/bug-fix-config-init-custom-path/: design.md  feature.gherkin  requirements.md  tasks.md
specs/bug-fix-connect-launch-deleting-temporary-chrome-profile-on-detach/: design.md  feature.gherkin  requirements.md  tasks.md
specs/bug-fix-console-follow-default-exit-code-on-error-messages/: design.md  feature.gherkin  requirements.md  tasks.md
specs/bug-fix-emulate-status-cpu-throttle-rate-not-reflected-after-emulate-set-cpu/: design.md  feature.gherkin  requirements.md  tasks.md  verification-report.md
specs/bug-fix-fill-many-target-field-name/: design.md  requirements.md  tasks.md
specs/bug-fix-frame-auto-selector-targeting-in-dom-commands/: design.md  feature.gherkin  requirements.md  tasks.md
specs/bug-fix-interact-key-keyup-event/: design.md  feature.gherkin  requirements.md  tasks.md
specs/bug-fix-js-exec-plain-zero-byte-output-for-empty-strings/: design.md  feature.gherkin  requirements.md  tasks.md
specs/bug-fix-same-document-url-navigation-waits-for-fragment-only-navigations/: design.md  feature.gherkin  requirements.md  tasks.md  verification-report.md
specs/bug-fix-script-bind-auto-unwrap-scalar-results/: design.md  feature.gherkin  requirements.md  tasks.md
src/: audit.rs  capabilities.rs  capabilities_cli.rs  config.rs  connection.rs  console.rs  cookie.rs  coord_helpers.rs  coords.rs  dialog.rs  dom.rs  emulate.rs  error.rs  examples.rs  examples_data.rs  form.rs  frame.rs  interact.rs  js.rs  lib.rs  main.rs  man_enrichment.rs  markdown.rs  media.rs  navigate.rs  network.rs  output.rs  page.rs  perf.rs  session.rs  skill.rs  skill_check.rs  snapshot.rs  tabs.rs
steering/: product.md  structure.md  tech.md
tests/: bdd.rs  cdp_integration.rs
xtask/: Cargo.toml
(+490 files in other folders)
