[workspace]
members = [".", "xtask"]
resolver = "3"

[package]
name = "chrome-cli"
version = "0.1.4"
edition = "2024"
authors = ["Nunley Media Group"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nunley-Media-Group/chrome-cli"
description = "A CLI tool for browser automation via the Chrome DevTools Protocol"
keywords = ["chrome", "cdp", "browser", "automation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "signal"] }
tokio-tungstenite = "0.26"
base64 = "0.22"
toml = "0.8"
dirs = "6"
libc = "0.2"

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[[test]]
name = "bdd"
harness = false

[lints.clippy]
all = "deny"
pedantic = "warn"
